CruiseControl Release Notes - CVS

AntBuilder:
----------------------
* Changed command to run internal ant to use the -lib switch and only include ant-launcher.jar on the classpath.
  This should fix the error where optional tasks couldn't be found by Ant even though they where present on the classpath

AntBuilderTest:
----------------------
* Removed test for Ant 1.4 logfile containing invalid processing instruction, since it could fail the build with some XML Parsers.
  Changed it to test a valid xml log file as produced by Ant versions later than 1.4.x

cruisecontrol.sh:
----------------------
* handle path conversion under cygwin. Patch by John Woodward

errors.xsl:
----------------------
* Added errors.xsl to replace compile.xsl. Similar logic, but shows errors and warnings from all tasks.

HTMLEmailPublisher:
----------------------
* add xslFileList attribute as a mechanism to customize the list of .xsl files used. Patch by Peter Buckner

JabberPublisher:
----------------------
* Add 1 second sleep so multiple jabber publishers work. (CC-119) Patch by Fleur Kelpin

JDOM support:
----------------------
* Upgraded from version b9 to version 1.0

JMX interface:
----------------------
* Fixed bug where pausing a project would keep all projects from building.

Log(Test):
----------------------
* Small patch (CC-121) for new JDOM version by Mark Doliner

manifest.mf:
----------------------
* Corrected Class-Path to refer to the correct jars (includes CC-99)

modifications.xsl:
----------------------
* Fixed matching wrong template for p4 modifications. Patch by Anil Arora

ModificationSet:
----------------------
* Fix for possible NPE when using ignoreFiles

navigation.jsp:
----------------------
* New combo box for project selection (including link to status page). Contribution by Gerd Zanker

reporting application:
----------------------
* Moved JSP's, WEB-INF and static content to dedicated subdirectory (CC-95)

Project:
----------------------